Fixes overflow issue on mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,6 +165,7 @@ html {
   font-size: 14px;
   /* Increased base size slightly */
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -177,6 +178,7 @@ body {
   -webkit-font-smoothing: antialiased;
   position: relative;
   /* Ensure psuedo-element positions relative to body */
+  overflow-x: hidden;
 }
 
 /* Dotted background using pseudo-element to fade out */
@@ -761,8 +763,7 @@ td {
 
 /* Scrollbar Styling for Table Wrapper */
 .matephis-table-wrapper::-webkit-scrollbar {
-  height: 12px; /* Ensure height for horizontal bar */
-  border: 1px solid var(--border);
+  height: 8px; /* Ensure height for horizontal bar */
   border-radius: 0px;
 }
 
@@ -1475,6 +1476,8 @@ li a[href^="https://"] {
   .page-layout img {
     max-width: 80%;
     height: auto;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .page-layout .matephis-plot-container {
